Forced mobile view footer to be two columns wide to avoid button truncation.

--- a/src/theme-gcwu-fegc/sass/includes/default-mobile.scss
+++ b/src/theme-gcwu-fegc/sass/includes/default-mobile.scss
@@ -146,13 +146,25 @@ a {
 #gcwu-sft{
 	padding-bottom:5px;
 	margin-top:5px;
+	.ui-footer {
+		border:0;
+	}
 	li {
 		a.ui-btn {
 			font-weight:700;
-			margin-top:-1px;
+			margin:0;
+			border-top-width:0;
 		}
 		a.ui-btn-active{
 			color:#fff;
+		}
+		&:nth-child(1), &:nth-child(2) {
+			a.ui-btn {
+				border-top-width:1px;
+			}
+		}
+		&.ui-block-a a.ui-btn {
+			border-right-width:0;
 		}
 	}
 }
